automation-service/msk/msk-monitoring/burrow-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: msk-burrow
  namespace: kafka-topics
  labels:
    app: msk-burrow
spec:
  ports:
  - name: external
    port: 8000
  selector:
    app: msk-burrow
---
apiVersion: v1
kind: Service
metadata:
  name: msk-burrow-dashboard
  namespace: kafka-topics
  labels:
    app: msk-burrow-dashboard
spec:
  ports:
  - name: external
    port: 3000
  selector:
    app: msk-burrow-dashboard
